retrieveUnpackaged/objects/Newsfeed__c.object
<CustomObject>
    <description>The object for news feed items.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <description>This refers to the application method being applied for- General Application, Examination, etc.</description>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This refers to the application type being applied for: Application Types- Trades Credential, Plan Review, Permit To Operate, etc.</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <description>This refers to the credential type being applied for</description>
        <label>Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <description>This refers to the credential being applied for</description>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_API_Name__c</fullName>
        <label>Document API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Unique Record Identifier</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FAQ_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FAQ Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>User Instructions for Pages</description>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Link for the news feed</description>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <description>This refers to the permit type being applied for as defined by the program area</description>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <description>This refers to the program area being applied for as defined by the application type</description>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Program_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_type_Name__c</fullName>
        <description>RecordType.Name</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>Section field categorizes FAQ questions into different types like Registration, Status, Public Search etc</description>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sections_for_Support_Page</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_For__c</fullName>
        <description>Describes where the language should show based on the business/application process.</description>
        <label>Show For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Show_For</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the type of news item- instruction, attestation, video, etc.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>News_Type</valueSetName>
        </valueSet>
    </fields>
    <label>News</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Credential__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DC</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Credential__c</columns>
        <columns>Credential_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Dwelling Contractor</value>
        </filters>
        <label>DC</label>
    </listViews>
    <listViews>
        <fullName>Delegated_Municipality</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Record_type_Name__c</columns>
        <columns>External_Id__c</columns>
        <columns>Credential__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Instructions__c</columns>
        <columns>Show_For__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Delegated Municipality Agent</value>
        </filters>
        <label>Delegated Municipality</label>
    </listViews>
    <listViews>
        <fullName>Dwelling_Contractor_News</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Credential__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Instructions__c</columns>
        <columns>Show_For__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Dwelling Contractor</value>
        </filters>
        <label>Dwelling Contractor News</label>
    </listViews>
    <listViews>
        <fullName>MHC1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>Manufactured Homes Community Permit</value>
        </filters>
        <label>MHC</label>
    </listViews>
    <listViews>
        <fullName>NP</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential__c</field>
            <operation>contains</operation>
            <value>Dwelling</value>
        </filters>
        <label>NP</label>
    </listViews>
    <listViews>
        <fullName>POWTS_News_NC</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Permit_Type__c</columns>
        <columns>Instructions__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Area__c</field>
            <operation>equals</operation>
            <value>POWTS</value>
        </filters>
        <label>POWTS News NC</label>
    </listViews>
    <listViews>
        <fullName>Soil_Professions_News</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Credential__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Instructions__c</columns>
        <columns>Show_For__c</columns>
        <columns>Application_Method__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Soil Professions</value>
        </filters>
        <label>Soil Professions News</label>
    </listViews>
    <listViews>
        <fullName>Uniform_Dwelling_Codes_News</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Instructions__c</columns>
        <columns>Show_For__c</columns>
        <columns>Application_Method__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Uniform Dwelling Code</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Instructions</value>
        </filters>
        <label>Uniform Dwelling Codes News</label>
    </listViews>
    <nameField>
        <label>News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <recordTypes>
        <fullName>Affidavit_Link</fullName>
        <active>true</active>
        <description>Link for Affidavit</description>
        <label>Affidavit Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>Attestation_Line</fullName>
        <active>true</active>
        <description>A line of the attestation</description>
        <label>Attestation Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>FAQ questions for Support page on Portal</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Functional_Area_Address</fullName>
        <active>true</active>
        <description>Stores address for the functional area</description>
        <label>Functional Area Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Notifications</fullName>
        <active>true</active>
        <description>Record type for displaying the notifications on the portal.</description>
        <label>Notifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Page_Instructions</fullName>
        <active>true</active>
        <description>Instructions for Pages</description>
        <label>Page Instructions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>